--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
@@ -9,10 +9,10 @@
         class="menu"
       >
         <fieldset class="menu__fieldset">
-          <input type="image" src="/img/sample.webp" class="menu__input" />
+          <input type="image" src="/img/category/음식.png" class="menu__input" />
         </fieldset>
         <fieldset class="menu__fieldset">
-          <legend class="menu__legend">이름</legend>
+          <legend class="menu__legend">메뉴명</legend>
           <input type="text" class="menu__input" th:field="*{name}" />
         </fieldset>
         <fieldset class="menu__fieldset">
