--- a/WhatToEatToday/src/main/resources/static/css/main/editMenu.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/editMenu.css
@@ -1,11 +1,11 @@
 .menu {
-  background-color: var(--color-azraq-blue);
+  background-color: #dee1d1;
   padding: 40px;
   border-radius: 15px;
 }
 .menu__fieldset {
-  border: 3px solid var(--color-dark-sapphire);
-  background-color: white;
+/*   border: 3px solid var(--color-dark-sapphire);
+  background-color: white; */
   margin-bottom: 30px;
   padding-bottom: 15px;
   border-radius: 5px;
@@ -17,7 +17,18 @@
 
 .menu__fieldset:nth-child(2) {
   margin-bottom: 50px;
+     border: 3px solid #c0bca7;
+    background-color: white;
+      border-radius: 8px;
 }
+
+  .menu__fieldset:nth-child(3) {
+/*     margin-bottom: 50px;  */
+    border: 3px solid #c0bca7;
+    background-color: white;
+      border-radius: 8px;
+  }
+  
 .menu__legend {
   font-size: var(--font-medium);
   padding: 10px 15px;
@@ -27,24 +38,25 @@
   border-radius: 8px;
 }
 .menu__input {
-  padding: 15px;
+  padding: 15px 20px;
   width: 100%;
   font-size: var(--font-medium);
+  color: #494841;
 }
 
 .menu__button {
   font-size: var(--font-medium);
-  margin-bottom: 10px;
+  margin-top: 40px;
   padding: 15px;
   width: 100%;
-  background-color: var(--color-yue-guang-lan-blue);
+  background-color: #6f6c61;
   border-radius: 8px;
   color: whitesmoke;
   border: 0;
 }
 
 a.menu__button {
-  margin-top: 30px;
+  margin: 30px 0 10px;
   text-align: center;
   display: block;
 }
