--- a/WhatToEatToday/src/main/resources/static/css/main/manager.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/manager.css
@@ -71,3 +71,8 @@
 .eating_house__text h2 {
   font-size: var(--font-medium);
 }
+
+.eating_house__text p {
+	font-family: "hanna2";
+	font-weight: bold;
+}
