--- a/WhatToEatToday/src/main/resources/static/css/main/viewAll.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/viewAll.css
@@ -10,7 +10,8 @@
 
 .eating_house {
   position: relative;
-  background-color: var(--color-tomato-red);
+  background-color: #dee1d1;
+  border-radius: 0 0 25px 25px;
   padding: 20px 10px 10px;
 }
 
@@ -49,8 +50,10 @@
 .eating_house__img img {
   width: 100%;
   height: 100%;
-  background: url(../../img/sample.webp) no-repeat center 100% / cover;
-}
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  }
 
 .eating_house__text {
   width: calc(100%-80px);
@@ -58,6 +61,7 @@
   padding-left: 20px;
   height: 100%;
   float: left;
+  color: #494841;
 }
 .eating_house__text h2 {
   margin-bottom: 10px;
