--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
@@ -14,12 +14,12 @@
         <fieldset class="menu__fieldset">
           <legend class="menu__legend">카테고리</legend>
           <select class="menu__input" th:field="*{category}"}>
-            <option value=""> 음식 종류 </option>
+            <option class="menu__category" value=""> 음식 종류 </option>
               <option th:each="category : ${cate}" th:value="${category.id}" th:text="${category.name}"></option>
           </select>
         </fieldset>
         <fieldset class="menu__fieldset">
-          <legend class="menu__legend">이름</legend>
+          <legend class="menu__legend">메뉴명</legend>
           <input type="text" class="menu__input" th:field="*{name}" />
         </fieldset>
         <fieldset class="menu__fieldset">
