--- a/WhatToEatToday/src/main/resources/static/css/main/researchMenuList.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/researchMenuList.css
@@ -3,15 +3,16 @@
 }
 
 .eating_house__menu_list {
-  background-color: var(--color-yue-guang-lan-blue);
-  padding: 40px;
+  background-color: #dee1d1;
+  padding: 25px 25px 5px;
   border-radius: 15px;
 }
 
 .eating_house__menu {
-  background-color: var(--color-azraq-blue);
-  margin-bottom: 5px;
-  border-radius: 10px;
+  background-color: white;
+  margin-bottom: 20px;
+  border-radius: 25px;
+  color: #494841;
 }
 
 .eating_house__menu_inner {
@@ -30,7 +31,6 @@
   width: 15%;
   float: left;
   overflow: hidden;
-  border: 3px solid var(--color-dark-sapphire);
   border-radius: 5px;
 }
 
@@ -44,7 +44,7 @@
 .eating_house__menu__text {
   float: left;
   width: 85%;
-  padding-left: 20px;
+  padding-left: 15px 0 0 20px;
 }
 
 .eating_house__menu__text h2 {
