--- a/WhatToEatToday/src/main/resources/static/css/main/home.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/home.css
@@ -14,7 +14,7 @@
 
 .search__bar {
   width: 100%;
-  padding: 8px;
+  padding: 8px 15px;
   border-radius: 15px 0px 0 15px;
   border: 0;
   font-size: 28px;
