--- a/WhatToEatToday/src/main/resources/static/css/main/menuRecommend.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/menuRecommend.css
@@ -2,7 +2,7 @@
   font-size: 22px;
   margin-bottom: 30px;
   text-align: center;
-  color : #D07445;
+  color : darkslategray;
 }
 
 .main .inner {
@@ -118,8 +118,4 @@
   float: left;
   color : #8B461F;
   border: 8px solid rgba(0, 0, 0, 0.2);
-}
-
-.footer {
-  background-color: antiquewhite;
 }
