--- a/WhatToEatToday/src/main/resources/static/css/main/editMenu.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/editMenu.css
@@ -11,6 +11,14 @@
   border-radius: 5px;
 }
 
+.menu__fieldset select {
+	font-family: "hanna"; 
+	background: url(https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg) no-repeat 98% 50%; /* 네이티브 화살표 대체 */ 
+	border: 1px solid white; 
+	appearance: none;
+  }
+  
+
 .menu__fieldset:nth-child(1) {
   margin-bottom: 30px;
 }
@@ -22,8 +30,15 @@
       border-radius: 8px;
 }
 
-  .menu__fieldset:nth-child(3) {
-/*     margin-bottom: 50px;  */
+ .menu__fieldset:nth-child(3) {
+    margin-bottom: 50px; 
+    border: 3px solid #c0bca7;
+    background-color: white;
+      border-radius: 8px;
+  }
+  
+   .menu__fieldset:nth-child(4) {
+/*     margin-bottom: 50px; */
     border: 3px solid #c0bca7;
     background-color: white;
       border-radius: 8px;
@@ -43,6 +58,11 @@
   font-size: var(--font-medium);
   color: #494841;
 }
+
+.menu__input option {
+  	font-family: "hanna2";
+  }
+
 
 .menu__button {
   font-size: var(--font-medium);
