--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
@@ -12,6 +12,13 @@
           <input type="image" src="/img/category/음식.png" class="menu__input" />
         </fieldset>
         <fieldset class="menu__fieldset">
+          <legend class="menu__legend">카테고리</legend>
+          <select class="menu__input" th:field="*{category}"}>
+            <option th:each="category : ${cate}" th:if="${category.id} == ${cateid}" th:value="${category.id}" th:text="${category.name}"  th:selected="${category.id}"></option>
+            <option th:each="category : ${cate}" th:unless="${category.id} == ${cateid}" th:value="${category.id}" th:text="${category.name}"></option>
+          </select>
+        </fieldset>
+        <fieldset class="menu__fieldset">
           <legend class="menu__legend">메뉴명</legend>
           <input type="text" class="menu__input" th:field="*{name}" />
         </fieldset>
