--- a/WhatToEatToday/src/main/resources/templates/fragments/main/researchMenuList.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/researchMenuList.html
@@ -3,14 +3,10 @@
 <main class="main" th:fragment="main">
     <div class="inner">
         <ul class="eating_house__menu_list">
-            <li
-                    class="eating_house__menu"
-                    th:each="menu : ${menu}"
-            >
-                <div
-                        class="eating_house__menu_inner"
-
-                >
+            <li  class="eating_house__menu" th:each="menu : ${menu}">
+              <a  class="eating_house__inner" th:href="@{/customer/eating_house/All}">
+            
+                <div class="eating_house__menu_inner">
                     <figure class="eating_house__menu__img_fieldset">
                         <img
                                 class="eating_house__menu__img"
@@ -24,10 +20,9 @@
                         <p th:text="${menu.getPrice()} + '원'"></p>
                     </div>
                 </div>
+               </a> 
             </li>
-            <li class="eating_house__menu">
-
-            </li>
+            <li class="eating_house__menu"></li>
         </ul>
     </div>
 </main>
