--- a/WhatToEatToday/src/main/resources/static/css/main/researchMenuList.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/researchMenuList.css
@@ -44,7 +44,7 @@
 .eating_house__menu__text {
   float: left;
   width: 85%;
-  padding-left: 15px 0 0 20px;
+  padding: 15px 0 0 20px;
 }
 
 .eating_house__menu__text h2 {
