--- a/WhatToEatToday/src/main/resources/templates/fragments/header.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/header.html
@@ -32,7 +32,7 @@
                 </th:block>
                 <th:block th:case="Customer">
                     <li>
-                        <a th:href="@{/customer/mypage/ + ${session.member.getId()} }" >마이페이지</a>
+                        <a th:href="@{'/customer/mypage/' + ${session.member.getId()} }" >마이페이지</a>
                     </li>
                 </th:block>
                 <li>
