--- a/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/addMenu.html
@@ -3,7 +3,7 @@
   <main class="main" th:fragment="main">
     <div class="inner">
       <form
-        th:action="@{ '/manager/eating_house/edit/' + ${eatingHouse.getId()} + '/menu/add'}"
+        th:action="@{'/manager/eating_house/edit/' + ${eatingHouse.getId()} + '/menu/add'}"
         method="post"
         th:object="${menuForm}"
         class="menu"
@@ -13,7 +13,7 @@
         </fieldset>
         <fieldset class="menu__fieldset">
           <legend class="menu__legend">카테고리</legend>
-          <select class="menu__input" th:field="*{category}"}>
+          <select class="menu__input" th:field="*{category}">
             <option class="menu__category" value="">전체 메뉴</option>
               <option th:each="category : ${cate}" th:value="${category.id}" th:text="${category.name}"></option>
           </select>
