--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>메뉴 추천받기</title>   
-    <script
-      src="https://kit.fontawesome.com/bfafa52380.js"
-      crossorigin="anonymous"
-      defer
-    ></script>
+  
   </head>
   <body>
     
@@ -20,7 +16,7 @@
         <br>
         <h2>오늘 뭐 먹지?</h2>
         <p>키워드로 메뉴 추천을 도와드릴게요</p>
-        <input
+        <input       	
           type="radio"
           name="keyword_nav__trigger"
           id="keyword_nav__trigger01"
@@ -39,42 +35,48 @@
         <nav class="keyword_nav">
           <ul>
             <li>
-              <label class="keyword_nav__item" for="keyword_nav__trigger01"
-                >오늘 기분은?</label
-              >
+            <div th:object="${concate1}">
+              <label class="keyword_nav__item" for="keyword_nav__trigger01" th:text="'오늘' + ${concate1.name} + '은?'" 
+                ></label>
+            </div>    
             </li>
             <li>
-              <label class="keyword_nav__item" for="keyword_nav__trigger02"
-                >오늘 날씨는?</label
-              >
+             <div th:object="${concate2}">
+              <label class="keyword_nav__item" for="keyword_nav__trigger02" th:text="'오늘' + ${concate2.name} + '는?'"
+                ></label>
+              </div>  
             </li>
             <li>
-              <label class="keyword_nav__item" for="keyword_nav__trigger03"
-                >오늘 상황은?</label
-              >
+            <div th:object="${concate3}">
+              <label class="keyword_nav__item" for="keyword_nav__trigger03" th:text="'오늘' + ${concate3.name} + '은?'"
+                ></label>
+            </div>    
             </li>
           </ul>
         </nav>
         <ul class="keyword_box">
           <li class="keyword_box__item">
             <form id="section_search">
-              <label th:each="condition : ${condition1}">
-              	<input th:value="${condition.id}" th:text="${condition.name}"/>              	
-              </label>              
+              <div th:each="condition : ${condition1}">
+              	<input th:id="${condition}" type="checkbox" th:value="${condition.name}"/>    
+              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              </div>              
             </form>
           </li>
           <li class="keyword_box__item">
             <form id="section_search">
-              <label th:each="condition : ${condition2}">
-              	<input th:value="${condition.id}" th:text="${condition.name}"/> 
-              </label> 
+              <div th:each="condition : ${condition2}">
+              	<input th:id="${condition}" type="checkbox" />    
+              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              </div> 
             </form>
           </li>
           <li class="keyword_box__item">
             <form id="section_search">
-               <label th:each="condition : ${condition3}">
-              	<input th:value="${condition.id}" th:text="${condition.name}"/>
-               </label>  
+            <div th:each="condition : ${condition3}">
+              	<input th:id="${condition}" type="checkbox" />    
+              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              </div> 
             </form>
           </li>
         </ul>
