--- a/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
@@ -20,7 +20,7 @@ function check(event){
   console.dir(checked)
 
   for(let i = 0; i < checked.length; i++){
-      const temp = {text:checked[i].name};
+      const temp = {text:checked[i].value};
       checkedItem.push(temp);
   }
   localStorage.setItem("Selected_condition", JSON.stringify(checkedItem));
@@ -31,6 +31,8 @@ function check(event){
 }
 
 function resetForms(){
+	const checked = document.querySelectorAll("input[type=checkbox]:checked");
+	console.dir(checked)
 	forms[0].reset()
 	forms[1].reset()
 	forms[2].reset()
