--- a/WhatToEatToday/src/main/resources/static/css/main/joinCustomer.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/joinCustomer.css
@@ -1,38 +1,37 @@
 .join {
-	padding: 50px 100px 50px; 
-  border: 5px double #0a3d62;
+  padding: 50px 100px 50px;
+  border: 5px double var(--color-forest-blues);
   border-radius: 25px;
   margin: 50px 50px 100px;
 }
 
 .join__fieldset {
-    border: 3px solid #0a3d62; 
+  border: 3px solid var(--color-forest-blues);
   background-color: white;
   padding: 5px;
   margin-bottom: 5px;
-    border-radius: 8px; 
+  border-radius: 8px;
 }
 
 .join__title {
-	font-size: var(--font-large);
-	text-align: center;
-	color: #0a3d62;
-	margin-bottom: 50px;
+  font-size: var(--font-large);
+  text-align: center;
+  color: var(--color-forest-blues);
+  margin-bottom: 50px;
 }
 
 .join__input {
   padding: 10px;
   width: 100%;
   font-size: var(--font-regular);
- 
-   border-radius: 8px;
+  border-radius: 8px;
 }
 
 .join__button {
   font-size: var(--font-medium);
   padding: 15px;
   width: 100%;
-  background-color: #82ccdd;
+  background-color: var(--color-spray);
   border-radius: 8px;
   color: white;
   border: 0;
@@ -42,11 +41,12 @@
   float: left;
   width: 78%;
 }
-.join__input[id="address"] + .join__button {
+
+.join__input[id="address"]+.join__button {
   font-size: var(--font-regular);
   padding: 10px;
   width: 20%;
-  background-color: #82ccdd;
+  background-color: var(--color-spray);
   border-radius: 8px;
   color: white;
   border: 0;
@@ -56,6 +56,6 @@
 }
 
 .join__button:last-child {
-  background-color: #60a3bc;
+  background-color: var(--color-dupain);
   margin-top: 30px;
 }
