--- a/WhatToEatToday/src/main/resources/static/css/main/viewCfood.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/viewCfood.css
@@ -10,7 +10,7 @@
 
 .eating_house {
   position: relative;
-  background-color:  #ece6cc;
+  background-color: var(--color-ivory);
   padding: 20px 10px 10px;
   border-radius: 10px;
 }
@@ -23,7 +23,7 @@
   margin-top: -100px;
   margin-left: -10px;
   height: 10%;
-  background-color: #979383;
+  background-color: var(--color-benjamin-moore);
   border-radius: 60px 60px 0 0;
 }
 
@@ -39,6 +39,7 @@
   width: 100%;
   display: block;
 }
+
 .eating_house__img {
   border-radius: 5px;
   vertical-align: middle;
@@ -62,8 +63,9 @@
   padding-left: 20px;
   height: 100%;
   float: left;
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
+
 .eating_house__text h2 {
   margin-bottom: 10px;
 }
@@ -73,6 +75,6 @@
 }
 
 .eating_house__text p {
-	font-family: "hanna2";
-	font-weight: bold;
+  font-family: "hanna2";
+  font-weight: bold;
 }
