--- a/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/editMenu.html
@@ -9,7 +9,7 @@
         class="menu"
       >
         <fieldset class="menu__fieldset">
-          <input type="image" src="/img/category/음식.png" class="menu__input" />
+          <input type="image" src="/img/category/음식.png" alt=""  class="menu__input" />
         </fieldset>
         <fieldset class="menu__fieldset">
           <legend class="menu__legend">카테고리</legend>
