--- a/WhatToEatToday/src/main/resources/static/css/main/menuRecommendResult.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/menuRecommendResult.css
@@ -6,7 +6,6 @@
   text-align: center;
   padding: 5vh 0;
 }
-
 .main h2 {
   font-size: 34px;
   margin-bottom: 20px;
@@ -16,7 +15,7 @@
   font-size: 22px;
   margin-bottom: 30px;
   text-align: center;
-  color: darkslategray;
+  color : darkslategray;
 }
 
 .main .inner {
@@ -28,17 +27,23 @@
 .main input {
   display: none;
 }
-
-#keyword_nav__trigger01:checked~.keyword_nav li:nth-child(1) .keyword_nav__item {
-  background-color: var(--color-parsonage);
+#keyword_nav__trigger01:checked
+  ~ .keyword_nav
+  li:nth-child(1)
+  .keyword_nav__item {
+  background-color: #E8C08B;
 }
-
-#keyword_nav__trigger02:checked~.keyword_nav li:nth-child(2) .keyword_nav__item {
-  background-color: var(--color-parsonage);
+#keyword_nav__trigger02:checked
+  ~ .keyword_nav
+  li:nth-child(2)
+  .keyword_nav__item {
+  background-color: #E8C08B;
 }
-
-#keyword_nav__trigger03:checked~.keyword_nav li:nth-child(3) .keyword_nav__item {
-  background-color: var(--color-parsonage);
+#keyword_nav__trigger03:checked
+  ~ .keyword_nav
+  li:nth-child(3)
+  .keyword_nav__item {
+  background-color:#E8C08B;
 }
 
 .main .keyword_nav ul::after {
@@ -53,12 +58,10 @@
   height: 40px;
   float: left;
 }
-
 .main .keyword_nav ul li:nth-child(2),
 .main .keyword_nav ul li:nth-child(3) {
   margin-left: 5%;
 }
-
 .main .keyword_nav ul li .keyword_nav__item {
   font-size: 24px;
   width: 100%;
@@ -66,7 +69,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--color-stirrup);
+  color : #A36448;
 }
 
 .main .keyword_box .keyword_box__item {
@@ -75,11 +78,11 @@
 
 .main .keyword_box .keyword_box__item form {
   height: 400px;
-  border: 8px solid var(--color-olympic);
+  border: 8px solid #f5cd79;
 }
 
-.main .keyword_box .keyword_box__item form input:checked+label {
-  background-color: var(--color-parsonage);
+.main .keyword_box .keyword_box__item form input:checked + label {
+  background-color: #E8C08B;
 }
 
 .main .keyword_box .keyword_box__item form label {
@@ -91,42 +94,37 @@
   font-size: 18px;
   font-weight: bold;
   height: 33.33%;
-  color: var(--color-stirrup);
+  color : #A36448;
 }
 
-#keyword_nav__trigger01:checked~.keyword_box li.keyword_box__item:nth-child(1) {
+#keyword_nav__trigger01:checked ~ .keyword_box li.keyword_box__item:nth-child(1) {
   display: block;
 }
-
-#keyword_nav__trigger02:checked~.keyword_box li.keyword_box__item:nth-child(2) {
+#keyword_nav__trigger02:checked ~ .keyword_box li.keyword_box__item:nth-child(2) {
   display: block;
 }
-
-#keyword_nav__trigger03:checked~.keyword_box li.keyword_box__item:nth-child(3) {
+#keyword_nav__trigger03:checked ~ .keyword_box li.keyword_box__item:nth-child(3) {
   display: block;
 }
 
 .main .inner button {
   width: 48%;
   height: 50px;
+/*   font-weight: bold; */
   font-size: 18px;
   margin-top: 20px;
   float: left;
-  color: black;
+  color : black;
 }
 
 .main .inner button:last-child {
   margin-left: 4%;
 }
 
-#selected {
-  font-size: 40px;
-  display: flex;
-  justify-content: center;
-  margin-top: 15%;
-  color: black;
-}
-
-.iw_inner {
-  padding: 5px 10px;
+#selected{
+	font-size : 40px;
+	display: flex;
+    justify-content: center;
+    margin-top:15%;
+    color:black;
 }
