--- a/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
@@ -4,7 +4,7 @@
     <section class="highlight-clean">
       <div class="search__container">
           <div class="intro">
-              <h2 class="search__text">"오늘 뭐 먹지?"</h2>
+              <a href="/"><h2 class="search__text">"오늘 뭐 먹지?"</h2></a>
           </div>
           <div class="inner">
             <form action="/search" method="get">
