--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>    
-    <script
-      src="https://kit.fontawesome.com/bfafa52380.js"
-      crossorigin="anonymous"
-      defer
-    ></script>
+    
   </head>
   <body>
     
@@ -31,9 +27,7 @@
         <ul class="keyword_box">
           <li class="keyword_box__item">
           	<span th:text=${session.member.getAddress()} style="display:none"></span>
-            <form id="section_search">
-             
-            </form>
+            <form id="section_search"/>
           </li>
        
         </ul>
