--- a/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommendAdmin.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommendAdmin.html
@@ -11,16 +11,16 @@
 const button = document.querySelector("#input_submit");
 const resetButton = document.querySelector("#reset");
 const forms = document.querySelectorAll("form");
+let checkedItem = []
 
 function check(event){
   event.preventDefault()
-  let checkedItem = []
 
   const checked = document.querySelectorAll("input[type=checkbox]:checked");
   console.dir(checked)
 
   for(let i = 0; i < checked.length; i++){
-      const temp = {text:checked[i].value};
+      const temp = {text:checked[i].name};
       checkedItem.push(temp);
   }
   localStorage.setItem("Selected_condition", JSON.stringify(checkedItem));
@@ -31,8 +31,6 @@ function check(event){
 }
 
 function resetForms(){
-	const checked = document.querySelectorAll("input[type=checkbox]:checked");
-	console.dir(checked)
 	forms[0].reset()
 	forms[1].reset()
 	forms[2].reset()
