--- a/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommendResult.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommendResult.html
@@ -29,11 +29,9 @@ var ps = new kakao.maps.services.Places();
 //받아온 값들의 위치를 저장하기 위한 리스트
 let listIndex = [];
 
-const condition = ["즐거운", "무기력한", "입이 심심한", "허전한", "행복한", "설레는", "긴장되는", "짜증나는", "피곤한", "기쁜", "슬픈", "답답한", "우울한", "예민한", "스트레스 받는", "화창한", "선선한", "추운", "더운", "비가오는", "눈오는", "바람부는", "미세먼지 심한", "따뜻한", "번개치는", "안개 낀", "쌀쌀한", "건조한", "습한", "흐린", "다이어트 3일차 날", "회사점심회식 날", "가족식사 날", "집들이 날", "손님 대접하는 날", "단체 주문 있는 날", "야식 당기는 날", "소화 안 되는 날", "데이트 하는 날", "당기는 음식이 없는 날", "잠 안오는 날", "배부른데 입 심심한 날", "혼밥하는 날", "면접 날", "기념일"];
 const food = ["치킨", "피자", "고기", "카레", "연어", "녹차", "카페", "음료수", "아이스크림", "닭볶음탕", "떡볶이", "아이스크림", "스테이크", "디저트", "파스타", "치킨", "짜장면", "족발", "마라탕", "바나나", "고구마", "초콜릿", "연어", "견과류", "오리고기", "꿀물", "매실차", "치킨", "삼겹살", "족발&보쌈", "아이스크림", "초코케이크", "떡볶이", "고구마라떼", "모듬튀김", "찜닭", "연어샌드위치", "초코케이크", "치킨", "삼겹 살", "장어덮밥", "유자차", "짬뽕", "떡볶이", "매운카레", "디저트", "샌드위치", "돈까스", "브런치", "맥주", "치킨", "찐빵", "붕어빵", "어묵", "냉면", "삼계탕", "물회", "부대찌개", "파전", "두부김치", "삼겹살", "스테이크", "파스타", "버섯전골", "수제비", "잔치국수", "콩나물국", "미역국", "고등어구이", "짜장면", "치즈케이크", "냉면", "샤브샤브", "돈까스", "햄버거", "라면", "짬뽕", "초밥", "순대국밥", "수제비", "부대찌개", "간장게장", "비빔밥", "전복죽", "냉모밀", "팥빙수", "버블티", "파스타", "파전", "족발", "볶음밥", "포케", "샐러드", "초밥 뷔페", "면요리", "돈까스", "해산물(회)", "한정식", "양식", "돼지고기", "수육", "소갈비찜", "깐풍기", "오리고기", "마라탕", "덮밥", "도시락류", "샐러드류", "치킨", "피자", "만두", "죽", "숭늉", "수프", "초밥", "스테이크", "피자", "비빔국수", "피자", "카레", "체리에이드", "호두과자", "우유식빵", "토스트", "그릭요거트", "샐러드", "김밥", "초밥", "햄버거", "요거트", "커피", "샐러드", "스테이크", "스시정식", "파인다이닝"];
 
-//const food = {menuList}]];
-//const condition = {conditionList}]];
+
 
 //각각 선택된 랜덤음식과 위치를 저장하기 위해 선언
 let randomFood = "";
@@ -73,8 +71,8 @@ function loadList(){
 //------------------------------------------메서드 정의2-------------------------
 function findIndex(selectedList){
     //listIndex에 load 원소의 위치를 condition에서 찾아 저장
-    console.log(condition.indexOf(selectedList.text, 0))
-    listIndex.push(condition.indexOf(String(selectedList.text), 0))
+    //console.log(condition.indexOf(selectedList.text, 0))
+    listIndex.push(Number(selectedList.text))
 }
 
 //키워드 검색 완료 시 호출되는 콜백함수 입니다
