--- a/WhatToEatToday/src/main/resources/static/css/main/menuRecommendAdmin.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/menuRecommendAdmin.css
@@ -2,7 +2,7 @@
   font-size: 22px;
   margin-bottom: 30px;
   text-align: center;
-  color: darkslategray;
+  color : darkslategray;
 }
 
 .main .inner {
@@ -15,20 +15,27 @@
 }
 
 
-#keyword_nav__trigger01:checked~.keyword_nav li:nth-child(1) .keyword_nav__item {
-  background-color: var(--color-forest-blues);
+#keyword_nav__trigger01:checked
+  ~ .keyword_nav
+  li:nth-child(1)
+  .keyword_nav__item {
+  background-color: #0a3d62;
   color: white;
   transition: none;
 }
-
-#keyword_nav__trigger02:checked~.keyword_nav li:nth-child(2) .keyword_nav__item {
-  background-color: var(--color-forest-blues);
+#keyword_nav__trigger02:checked
+  ~ .keyword_nav
+  li:nth-child(2)
+  .keyword_nav__item {
+  background-color: #0a3d62;
   color: white;
   transition: none;
 }
-
-#keyword_nav__trigger03:checked~.keyword_nav li:nth-child(3) .keyword_nav__item {
-  background-color: var(--color-forest-blues);
+#keyword_nav__trigger03:checked
+  ~ .keyword_nav
+  li:nth-child(3)
+  .keyword_nav__item {
+  background-color: #0a3d62;
   color: white;
   transition: none;
 }
@@ -44,7 +51,6 @@
   width: calc(100% / 3);
   float: left;
 }
-
 .main .keyword_nav ul li .keyword_nav__item {
   padding: 30px 0;
   font-size: 24px;
@@ -55,7 +61,7 @@
   align-items: center;
   color: black;
   border: 8px solid rgba(0, 0, 0, 0.2);
-  background-color: var(--color-snowflake-white);
+  background-color: #efefef;
 }
 
 .main .keyword_box .keyword_box__item {
@@ -64,7 +70,7 @@
 
 .main .keyword_box .keyword_box__item form {
   border: 8px solid rgba(0, 0, 0, 0.2);
-
+  
 
 }
 
@@ -81,9 +87,10 @@
   align-items: center;
   float: left;
   width: 20%;
-  font-size: var(--font-regular);
+  font-size: 20px;
+/*   font-weight: bold; */
   height: 100px;
-  color: black;
+  color : black;
 }
 
 .main .keyword_box .keyword_box__item form label:hover {
@@ -91,20 +98,18 @@
 }
 
 
-.main .keyword_box .keyword_box__item form input:checked+label {
+.main .keyword_box .keyword_box__item form input:checked + label {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 
-#keyword_nav__trigger01:checked~.keyword_box li.keyword_box__item:nth-child(1) {
+#keyword_nav__trigger01:checked ~ .keyword_box li.keyword_box__item:nth-child(1) {
   display: block;
 }
-
-#keyword_nav__trigger02:checked~.keyword_box li.keyword_box__item:nth-child(2) {
+#keyword_nav__trigger02:checked ~ .keyword_box li.keyword_box__item:nth-child(2) {
   display: block;
 }
-
-#keyword_nav__trigger03:checked~.keyword_box li.keyword_box__item:nth-child(3) {
+#keyword_nav__trigger03:checked ~ .keyword_box li.keyword_box__item:nth-child(3) {
   display: block;
 }
 
@@ -112,8 +117,9 @@
   display: block;
   width: 50%;
   padding: 20px 0;
-  font-size: var(--font-regular);
+/*   font-weight: bold; */
+  font-size: 20px;
   float: left;
-  color: black;
+  color : black;
   border: 8px solid rgba(0, 0, 0, 0.2);
 }
