--- a/WhatToEatToday/src/main/resources/templates/fragments/header.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,10 @@
                 </li>
             </ul>
             <ul th:if=" ${session.login == 'logined'} "  th:switch="${session.memberType}" >
-                <th:block th:case="Admin">
+                <th:block th:case="Admin">                 
+                    <li class="admin_recommend">
+                        <a href="/admin/admin_recommend">메뉴추천관리</a>
+                    </li>
                     <li>
                         <a href="/admin/members" >회원관리</a>
                     </li>
