--- a/WhatToEatToday/src/main/resources/static/css/header.css
+++ b/WhatToEatToday/src/main/resources/static/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  background: #0a3d62;
+  background: var(--color-forest-blues);
   height: 60px;
 }
 .header .inner {
@@ -34,7 +34,7 @@
   height: 40px;
   border: 1px white;
   border-radius: 20px;
-  background-color: #0a3d62;
+  background-color: var(--color-forest-blues);
   color: white;
   text-align: center;
   line-height: 40px;
@@ -43,7 +43,7 @@
 
 .header .navbar ul li:hover {
   background-color: white;
-  color: #0a3d62;
+  color: var(--color-forest-blues);
 }
 
 .header .navbar .admin_recommend {
