--- a/WhatToEatToday/src/main/resources/static/css/main/menuRecommendAdmin.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/menuRecommendAdmin.css
@@ -7,7 +7,7 @@
 
 .main .inner {
   max-width: 1200px;
-  padding: 30px 20px;
+  padding: 0px 20px 100px;
 }
 
 .main input {
@@ -19,15 +19,16 @@
   ~ .keyword_nav
   li:nth-child(1)
   .keyword_nav__item {
-  background-color: #0a3d62;
+  background-color: var(--color-forest-blues);
   color: white;
   transition: none;
 }
+
 #keyword_nav__trigger02:checked
   ~ .keyword_nav
   li:nth-child(2)
   .keyword_nav__item {
-  background-color: #0a3d62;
+  background-color: var(--color-forest-blues);
   color: white;
   transition: none;
 }
@@ -35,7 +36,7 @@
   ~ .keyword_nav
   li:nth-child(3)
   .keyword_nav__item {
-  background-color: #0a3d62;
+  background-color: var(--color-forest-blues);
   color: white;
   transition: none;
 }
@@ -61,7 +62,7 @@
   align-items: center;
   color: black;
   border: 8px solid rgba(0, 0, 0, 0.2);
-  background-color: #efefef;
+  background-color: var(--color-snowflake-white);
 }
 
 .main .keyword_box .keyword_box__item {
@@ -117,7 +118,6 @@
   display: block;
   width: 50%;
   padding: 20px 0;
-/*   font-weight: bold; */
   font-size: 20px;
   float: left;
   color : black;
