--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommend.html
@@ -59,7 +59,7 @@
             <form id="section_search" th:object="${longIdForm}" th:action="@{/customer/recommendResult/}">
               <div th:each="condition : ${condition1}">
               	<input th:id="${condition}" type="checkbox" th:value="${condition.id}"/>    
-              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              	<label th:for="${condition}" th:text="${condition.name}"></label>          	
               </div>              
             </form>
           </li>
@@ -67,7 +67,7 @@
             <form id="section_search" th:object="${longIdForm}" th:action="@{/customer/recommendResult/}">
               <div th:each="condition : ${condition2}">
               	<input th:id="${condition}" type="checkbox" th:value="${condition.id}"/>    
-              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              	<label th:for="${condition}" th:text="${condition.name}"></label>          	
               </div> 
             </form>
           </li>
@@ -75,7 +75,7 @@
             <form id="section_search" th:object="${longIdForm}" th:action="@{/customer/recommendResult/}">
             <div th:each="condition : ${condition3}">
               	<input th:id="${condition}" type="checkbox" th:value="${condition.id}"/>    
-              	<label th:for="${condition}" th:value="${condition.id}" th:text="${condition.name}"></label>          	
+              	<label th:for="${condition}" th:text="${condition.name}"></label>          	
               </div> 
             </form>
           </li>
