--- a/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/menuRecommend.html
@@ -11,6 +11,7 @@
 const button = document.querySelector("#input_submit");
 const resetButton = document.querySelector("#reset");
 const forms = document.querySelectorAll("form");
+//const conditions = ${condition1[12].getId()};
 
 function check(event){
   event.preventDefault()
