--- a/WhatToEatToday/src/main/resources/static/css/main/addConditionMenu.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/addConditionMenu.css
@@ -5,17 +5,17 @@
 .eating_house {
   padding: 40px;
   border-radius: 25px;
-  background-color: #dee1d1;
+  background-color: var(--color-evonik-degussa);
 }
 
 .addConditionMenu__title {
   text-align: center;
   font-size: var(--font-large);
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house .eating_house__fieldset {
-  border: 3px solid #c0bca7;
+  border: 3px solid var(--color-limestrong);
   background-color: white;
   padding-bottom: 10px;
   margin: 30px 0 5px;
@@ -28,7 +28,7 @@
   padding: 5px 10px;
   background-color: white;
   margin-left: 20px;
-  color: #8b8b8b;
+  color: var(--color-little-greene);
   border-radius: 8px;
 }
 
@@ -36,7 +36,7 @@
   padding: 10px 15px;
   width: 100%;
   font-size: var(--font-medium);
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house__button__container {
@@ -49,7 +49,7 @@
   font-size: var(--font-medium);
   padding: 15px;
   width: 45%;
-  background-color: #6f6c61;
+  background-color: var(--color-bristol);
   border-radius: 8px;
   color: white;
   border: 0;
