--- a/WhatToEatToday/src/main/resources/static/css/main/editCondition.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/editCondition.css
@@ -5,13 +5,13 @@
 .eating_house {
   padding: 40px;
   border-radius: 25px 25px 0 0;
-  background-color: #ece6cc;
+  background-color: var(--color-ivory);
 }
 
 .editCondition__title {
   text-align: center;
   font-size: var(--font-large);
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house .text__field {
@@ -21,7 +21,7 @@
 }
 
 .eating_house .text__field .eating_house__fieldset {
-  border: 3px solid #c0bca7;
+  border: 3px solid var(--color-limestrong);
   background-color: white;
   padding-bottom: 10px;
   margin: 30px 0 5px;
@@ -35,7 +35,7 @@
   padding: 5px 10px;
   background-color: white;
   margin-left: 20px;
-  color: #8b8b8b;
+  color: var(--color-little-greene);
   border-radius: 8px;
 }
 
@@ -43,14 +43,14 @@
   padding: 10px 15px;
   width: 100%;
   font-size: var(--font-medium);
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house__textarea {
   padding: 10px 15px;
   width: 100%;
   font-size: var(--font-medium);
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house__button__container {
@@ -63,7 +63,7 @@
   font-size: var(--font-medium);
   padding: 15px;
   width: 45%;
-  background-color: #6f6c61;
+  background-color: var(--color-bristol);
   border-radius: 8px;
   color: white;
   border: 0;
@@ -79,7 +79,7 @@ a.eating_house__button {
 }
 
 .eating_house__menu_list {
-  background-color: #dee1d1;
+  background-color: var(--color-evonik-degussa);
   padding: 25px;
   border-radius: 0 0 25px 25px;
 }
@@ -88,7 +88,7 @@ a.eating_house__button {
   margin: 10px 20px 2px;
   border-radius: 25px;
   background-color: white;
-  color: #494841;
+  color: var(--color-crown-diamond);
 }
 
 .eating_house__menu_inner {
@@ -119,7 +119,7 @@ a.eating_house__button {
 }
 .eating_house__menu:last-child {
   text-align: center;
-  background-color: #dee1d1;
+  background-color: var(--color-evonik-degussa);
 }
 
 .menu__add{
