--- a/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/menuRecommendResult.html
@@ -31,8 +31,8 @@
           </li>
        
         </ul>
-        <button type="submit" id="input_submit" onclick="location.href='/customer/recommendResult'">가게 보기</button>
-        <button onclick="location.href='/customer/recommend'">다시 고르기</button>
+        <button type="submit" id="input_submit" th:onclick="|location.href='@{/customer/recommendResult}'|">다른 메뉴 추천</button>
+        <button type="button" th:onclick="|location.href='@{/customer/recommend}'|">다시 고르기</button>
       </div>
     </main>
     <footer class="footer"></footer>
